@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-11T01:15:55Z",
-  "count_outdated" : 2525,
-  "uniques_outdated" : 816,
-  "count" : 2581,
-  "uniques" : 834,
+  "timestamp" : "2024-06-12T01:15:44Z",
+  "count_outdated" : 2526,
+  "uniques_outdated" : 817,
+  "count" : 2582,
+  "uniques" : 835,
   "views" : [
-    {
-      "timestamp": "2024-05-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-05-29T00:00:00Z",
       "count": 1,
@@ -100,6 +91,15 @@
       "count": 12,
       "count_minmax": [ 12, 12 ],
       "count_decinc": [ 0, 12 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-06-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
