@@ -3,11 +3,6 @@
   "uniques": 17,
   "views": [
     {
-      "timestamp": "2024-05-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-05-29T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -55,6 +50,11 @@
     {
       "timestamp": "2024-06-10T00:00:00Z",
       "count": 12,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-06-11T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
